syntax = "proto3";

option java_multiple_files = true;
option java_package = "booking.proto";

// Events published to Kafka

message ParticipantAdded {
  string classId = 1;
  string name = 2;
}

message ParticipantRemoved {
  string classId = 1;
  string name = 2;
}

message ClosedClass {
  string classId = 1;
}